--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                     <button id="home-button3">+3</button>
             </div>
             <div>
-                <h3 id="guest">GUEST</h3>
+                <h3 id="guest">AWAY</h3>
                 <h3 id="guest-score"></h3>
                     <button id="guest-button1">+1</button>
                     <button id="guest-button2">+2</button>
